# calis

./: .gitignore  .prettierignore  PROJECT_PLAN.md  README.md  package.json  prettier.config.cjs
apps/api/: .env.example  README.md  package.json  pyproject.toml  tsconfig.json
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 20260607000000_initial_api_schema.py  20260607010000_add_profiles.py  20260608000000_add_plan_snapshots.py  20260608010000_add_completed_exercise_ids.py  20260608020000_add_plan_completion_context.py  20260608030000_add_profile_streak.py  20260610010000_drop_questionnaire_tables.py  20260610020000_add_onboarding_sessions.py  20260610030000_drop_profile_answers.py  20260611010000_add_plan_feedback_ai.py
apps/api/prisma/: schema.prisma
apps/api/prisma/seed/: exercises.ts  index.ts  questionnaire.ts
apps/api/scripts/: ensure-sqlite.ts  import-exercisedb.ts
apps/api/src/: __init__.py  app.ts  index.ts  main.py  server.ts
apps/api/src/config/: env.ts
apps/api/src/core/: config.py  database.py
apps/api/src/models/: __init__.py  client.ts  exercise.py  exercise.ts  level.py  onboarding.py  plan.py  profile.py  questionnaire.py  questionnaire.ts
apps/api/src/routes/: __init__.py  dependencies.py  exercises.py  onboarding.py  plans.py  profile.py
apps/api/src/schemas/: __init__.py  exercise.py  level.py  onboarding.py  plan.py  profile.py  questionnaire.py
apps/api/src/scripts/: import_exercisedb.py  migrate.py  seed.py
apps/api/src/services/: __init__.py  gemini.py  level.py  onboarding_ai.py  plan.py  (+4 more)
(+50 files in other folders)
