[project]
name = "calis-api"
version = "0.1.0"
description = "FastAPI backend for Calis."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi==0.125.0",
  "httpx>=0.28,<1",
  "python-dotenv>=1.0,<2",
  "sqlmodel==0.0.38",
  "uvicorn[standard]==0.38.0",
]

[project.scripts]
calis-api-migrate = "src.scripts.migrate:main"
calis-api-seed = "src.scripts.seed:main"
calis-api-import-exercises = "src.scripts.import_exercisedb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
